src/objects/Enterprise_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Prospect_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssessmentEntries__c</fullName>
        <label># Assessment Entries</label>
        <summaryFilterItems>
            <field>EC_QuestionResponse__c.CreatedDate</field>
            <operation>greaterOrEqual</operation>
            <value>5/15/2020 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>EC_QuestionResponse__c.SectionText__c</field>
            <operation>equals</operation>
            <value>Assessment</value>
        </summaryFilterItems>
        <summaryForeignKey>EC_QuestionResponse__c.Enterprise_Configuration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ConfigurationNumber__c</fullName>
        <displayFormat>EC-{0000}</displayFormat>
        <label>ConfigurationNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipName>Enterprise_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entries__c</fullName>
        <label>Entries</label>
        <summaryFilterItems>
            <field>EC_QuestionResponse__c.CreatedDate</field>
            <operation>greaterOrEqual</operation>
            <value>5/15/2020 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>EC_QuestionResponse__c.Enterprise_Configuration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROD</fullName>
                </value>
                <value>
                    <fullName>MIRROR</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>TEST</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDF_View__c</fullName>
        <formula>HYPERLINK(&apos;/apex/EnterpriseConfigurationFormPDF?id=&apos;&amp; Id ,&apos;Print&apos; ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <formula>SUBSTITUTE(
    IF(INCLUDES(DSI__r.Platform__c, &quot;MCE&quot;), &quot;MCE;&quot;,  NULL) +
    IF(INCLUDES(DSI__r.Platform__c, &quot;MCP&quot;), &quot;MCP;&quot;, NULL) +
    IF(INCLUDES(DSI__r.Platform__c, &quot;MEP&quot;), &quot;MEP;&quot;, NULL),

    &quot;&quot;,

    NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_View__c</fullName>
        <formula>HYPERLINK(&quot;/00O44000003UlsA?pv0=&quot;&amp; Id , &quot;View&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Last_Update_Date__c</fullName>
        <label>Response Last Update Date</label>
        <summarizedField>EC_QuestionResponse__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>EC_QuestionResponse__c.Enterprise_Configuration__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <formula>DSI__r.Support_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Level</label>
        <type>Text</type>
    </fields>
    <label>Instance Form</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instance Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_More_than_one_form_DSI</fullName>
        <active>true</active>
        <description>Prevent_More_than_one_form_DSI</description>
        <errorConditionFormula>AND(
ISNEW(),
NOT(ISBLANK(DSI__r.Instance_Form__c ))
)</errorConditionFormula>
        <errorMessage>Only one instance form can be created per DSI, use the Instance Form link to update the current form</errorMessage>
    </validationRules>
</CustomObject>